apps/kuard/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
  labels:
    app: kuard
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8080
  selector:
    app: kuard
